test-service/specs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: test-service  
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
